--- a/app/src/main/res/layout/content_receipt.xml
+++ b/app/src/main/res/layout/content_receipt.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent">
 
         <EditText
-            android:id="@+id/editTextTextPersonName2"
+            android:id="@+id/editTextInvoiceId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -32,14 +32,14 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:hint="Date of Invoice"
-            android:inputType="date"
+            android:inputType="textPersonName"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@+id/guideline4"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextInvoiceId" />
 
 
         <EditText
-            android:id="@+id/editTextTextPersonName6"
+            android:id="@+id/editTextVendorName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -52,7 +52,7 @@
             app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
 
         <EditText
-            android:id="@+id/editTextNumberDecimal"
+            android:id="@+id/editTextQuantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -62,7 +62,7 @@
             android:inputType="numberDecimal"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@+id/guideline4"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextVendorName" />
 
         <TextView
             android:id="@+id/textView3"
@@ -154,7 +154,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="24dp"
             app:layout_constraintStart_toStartOf="@+id/guideline4"
-            app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextQuantity" />
 
 
 
